--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -144,6 +144,7 @@
         <div class="modal-footer">
         <div class="row">
             <div class="col-lg-2 col-lg-offset-10">
+                <input type="text" hidden id="essayID" value="">
                 <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
                 <button type="submit"  class="btn btn-primary ">提交</button>
             </div>
@@ -189,6 +190,7 @@
                 $('#imageHint').text('选择你想显示的图片')
             }
         })
-    })
+    });
+
 </script>
 {% endblock %}
