--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -75,7 +75,7 @@
         {% endif %}
                   <ul class="dropdown-menu">
                     <li><a href=""><span class="glyphicon glyphicon-cog"></span>     设置  </a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-edit"></span>      修改密码</a></li>
+                    <li><a href="" data-toggle="modal" data-target="#modifyPassword"><span class="glyphicon glyphicon-edit"></span>      修改密码</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href='' id="logout"><span class="glyphicon glyphicon-log-out"></span>     退出登录</a></li>
                   </ul>
@@ -95,7 +95,7 @@
 
 {% block content %}{% endblock %}
 
-<!--模态框部分-->
+<!--登录模态框部分-->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -118,6 +118,41 @@
             <div class="col-lg-4 col-lg-offset-8">
                 <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
                 <button type="submit"  class="btn btn-primary " id="submit">登录</button>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--修改密码模态框部分-->
+<div class="modal fade" id="modifyPassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h3 id="headerText">修改密码</h3>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+            <label for="oddPassword">旧密码</label>
+            <input type="password" class="form-control" name="oldPassword" required placeholder="旧密码" id="oldPassword">
+            </div>
+            <div class="form-group">
+            <label for="newPassword">新密码</label>
+            <input type="password" class="form-control" name="password" required id="newPassword" placeholder="新密码">
+            </div>
+            <div class="form-group">
+            <label for="repeatPassword">请重复新密码</label>
+            <input type="password" class="form-control" name="password" required id="repeatPassword" placeholder="请重复新密码">
+            </div>
+            <br>
+      </div>
+      <div class="modal-footer">
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-8">
+                <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
+                <button type="submit"  class="btn btn-primary " id="changePassword">确认</button>
             </div>
         </div>
       </div>
@@ -225,6 +260,26 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
                 else
                 {
                     alert(data);
+                }
+            },async:false});
+        });
+    });
+    $(document).ready(function () {
+        $('#changePassword').click(function (){
+            var oldPassword = $('#oldPassword').val();
+            var newPassword = $('#newPassword').val();
+            var repeatPassword = $('#repeatPassword').val();
+            var hint = $('#headerText');
+            $.ajax({url:'/id={{ id }}/changePass/',type:'post',data:{'oldPassword':oldPassword,'newPassword':repeatPassword},success:function (data,status) {
+                if(data=='修改成功'){
+                    hint.text('修改密码');
+                    hint.css({'color':'black'});
+                    alert(data);
+                    top.location.reload();
+                }
+                else{
+                    hint.text(data);
+                    hint.css({'color':'red'});
                 }
             },async:false});
         });
