--- a/blog/templates/blog/showPhoto.html
+++ b/blog/templates/blog/showPhoto.html
@@ -8,7 +8,7 @@
           <img src={% static image %} alt="...">
           <div class="caption">
             <h3>图片简介</h3>
-            <p>{{ image.introduction }}</p>
+            <p style="font-family: 微软雅黑;font-size: 20px;">{{ image.introduction }}</p>
               <div class="row">
                   <p>{% if user.name == id %}
                         <!-- Small modal -->
