--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -74,7 +74,7 @@
 
         {% endif %}
                   <ul class="dropdown-menu">
-                    <li><a href=""><span class="glyphicon glyphicon-cog"></span>     设置  </a></li>
+                    <li><a href=""><span class="glyphicon glyphicon-user"></span>     设置  </a></li>
                     <li><a href="" data-toggle="modal" data-target="#modifyPassword"><span class="glyphicon glyphicon-edit"></span>      修改密码</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href='' id="logout"><span class="glyphicon glyphicon-log-out"></span>     退出登录</a></li>
@@ -132,6 +132,41 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h3 id="headerText">修改密码</h3>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+            <label for="oddPassword">旧密码</label>
+            <input type="password" class="form-control" name="oldPassword" required placeholder="旧密码" id="oldPassword">
+            </div>
+            <div class="form-group">
+            <label for="newPassword">新密码</label>
+            <input type="password" class="form-control" name="password" required id="newPassword" placeholder="新密码">
+            </div>
+            <div class="form-group">
+            <label for="repeatPassword">请重复新密码</label>
+            <input type="password" class="form-control" name="password" required id="repeatPassword" placeholder="请重复新密码">
+            </div>
+            <br>
+      </div>
+      <div class="modal-footer">
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-8">
+                <button type="button" class="btn btn-primary " data-dismiss="modal" aria-label="Close">取消</button>
+                <button type="submit"  class="btn btn-primary " id="changePassword">确认</button>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--设置信息模态框部分-->
+<div class="modal fade" id="userInformation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h3 id="headerText">设置信息</h3>
       </div>
       <div class="modal-body">
         <div class="form-group">
@@ -249,6 +284,50 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
                 }
             },async:false});
         });
+        $('input').keypress(function (event) {
+            alert(event.which());
+            if(event.which=='18')
+            {
+                var blogID = $('#blogID').val();
+            var password = $('#exampleInputPassword1').val();
+            $.ajax({url:'',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
+                if(data.length>10)
+                {
+                    //$('html').html(data);       //刷新后字体会变小的bug
+                    //window.location.reload();   //可以解决bug，但觉得还不够好
+                    top.location.reload()       //可以解决bug，只刷新顶部，比较好
+                    //$('.username').load('/' ,' .username')
+                }
+                else
+                {
+                    alert(data);
+                }
+            },async:false});
+            }
+        })
+    });
+    //这里负责对回车键的时间监控
+    $(document).ready(function () {
+        $('#myModal').keydown(function (event) {
+            if(event.which=='13')
+            {
+                var blogID = $('#blogID').val();
+            var password = $('#exampleInputPassword1').val();
+            $.ajax({url:'',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
+                if(data.length>10)
+                {
+                    //$('html').html(data);       //刷新后字体会变小的bug
+                    //window.location.reload();   //可以解决bug，但觉得还不够好
+                    top.location.reload()       //可以解决bug，只刷新顶部，比较好
+                    //$('.username').load('/' ,' .username')
+                }
+                else
+                {
+                    alert(data);
+                }
+            },async:false});
+            }
+        })
     });
     $(document).ready(function () {
         $('#logout').click(function (){
