--- a/blog/templates/blog/addLabels.html
+++ b/blog/templates/blog/addLabels.html
@@ -43,9 +43,13 @@
                     var y=document.createElement('option');
                     y.text = x;
                     y.value = data.id;
+                    var z=document.createElement('option');   //此处是莫名的坑
+                    z.text = x;
+                    z.value = data.id;
                     //给父窗口的label多选框添加刚刚新增的label
                     window.close();
-                    window.opener.document.getElementById('labelSelect').add(y,0);
+                    window.opener.document.getElementById('labelSelect').add(y,0);  //0表示插入的位置
+                    window.opener.document.getElementById('identityLabelSelect').add(z,0);
                 }
                 else{
                     alert(data);
