--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -28,10 +28,10 @@
               <div class="caption">
                 <h3>博主信息</h3>
               <p><span style="font-family: 微软雅黑;font-size: 15px;font-weight: bolder;">生日: </span>{{ author.birthday|default:'生年不详' }}</p>
-              <p><span style="font-family: 微软雅黑;font-size: 15px;font-weight: bolder;">星座: </span>{{ author.birthday|default:'暂时不清楚' }}</p>
+              <p><span style="font-family: 微软雅黑;font-size: 15px;font-weight: bolder;">星座: </span>{{ author.constellation|default:'暂时不清楚' }}</p>
               <p><span style="font-family: 微软雅黑;font-size: 15px;font-weight: bolder;">身份: </span>
                   {% if author.labels %}
-                      {% for label in essay.labels.all %}
+                      {% for label in author.labels.all %}
                             <h4><span class="label label-default">{{ label }}</span></h4>
                       {% endfor %}
                   {% else %}
