--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -55,7 +55,7 @@
                 <li><a href="/id={{ id }}/tech/">收获</a></li>
                 <li><a href="/id={{ id }}/trip/">旅游</a></li>
                 <li><a href="/id={{ id }}/photo/">照片墙</a></li>
-                <li><a href="">日程安排</a></li>
+{#                <li><a href="">日程安排</a></li>#}
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -83,12 +83,10 @@
                 </li>
             </ul>
 
-            <form class="navbar-form navbar-right" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="站内搜索">
-              </div>
-              <button type="submit" class="btn btn-default">搜索</button>
-            </form>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="站内搜索" id="search">
+          </div>
+          <button type="submit" class="btn btn-default" id="searchButton">搜索</button>
 
         </div>
     </div>
@@ -321,28 +319,8 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
                 }
             },async:false});
         });
-        $('input').keypress(function (event) {
-            alert(event.which());
-            if(event.which=='18')
-            {
-                var blogID = $('#blogID').val();
-            var password = $('#exampleInputPassword1').val();
-            $.ajax({url:'',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
-                if(data.length>10)
-                {
-                    //$('html').html(data);       //刷新后字体会变小的bug
-                    //window.location.reload();   //可以解决bug，但觉得还不够好
-                    top.location.reload()       //可以解决bug，只刷新顶部，比较好
-                    //$('.username').load('/' ,' .username')
-                }
-                else
-                {
-                    alert(data);
-                }
-            },async:false});
-            }
-        })
-    });
+
+
     //这里负责对回车键的时间监控
     $(document).ready(function () {
         $('#myModal').keydown(function (event) {
@@ -366,6 +344,23 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
             }
         })
     });
+
+    $(document).ready(function () {
+        $('#searchButton').click(function (){
+            var search = $('#search').val();
+            $.ajax({url:'/id={{ id }}/search/',type:'post',data:{'search':search},success:function (data,status) {
+                if(data.length>10)
+                {
+                    $('html').html(data);       //刷新后字体会变小的bug
+                }
+                else
+                {
+                    alert(data);
+                }
+            },async:false});
+        });
+
+
     $(document).ready(function () {
         $('#logout').click(function (){
             $.ajax({url:'',type:'post',data:{'logout':true},success:function (data,status) {
