解决了原来搜索框错位的问题

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -83,11 +83,12 @@
                 </li>
             </ul>
 
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="站内搜索" id="search">
-          </div>
-          <button type="submit" class="btn btn-default" id="searchButton">搜索</button>
-
+            <div class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="站内搜索" id="search">
+                </div>
+                <button type="submit" class="btn btn-default" id="searchButton">搜索</button>
+            </div>
         </div>
     </div>
 </nav>
