--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -303,23 +303,28 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
 //此处有大坑！！！
 //在用ajax提交时，不能有原来的<form></form>标签的存在，否则会干扰ajax的运行！！！
     $(document).ready(function () {
-        $('#submit').click(function (){
+        $('#submit').click(function () {
             var blogID = $('#blogID').val();
             var password = $('#exampleInputPassword1').val();
-            $.ajax({url:'',type:'post',data:{'blogID':blogID,'password':password},success:function (data,status) {
-                if(data.length>10)
-                {
-                    //$('html').html(data);       //刷新后字体会变小的bug
-                    //window.location.reload();   //可以解决bug，但觉得还不够好
-                    top.location.reload()       //可以解决bug，只刷新顶部，比较好
-                    //$('.username').load('/' ,' .username')
-                }
-                else
-                {
-                    alert(data);
-                }
-            },async:false});
+            $.ajax({
+                url: '',
+                type: 'post',
+                data: {'blogID': blogID, 'password': password},
+                success: function (data, status) {
+                    if (data.length > 10) {
+                        //$('html').html(data);       //刷新后字体会变小的bug
+                        //window.location.reload();   //可以解决bug，但觉得还不够好
+                        top.location.reload()       //可以解决bug，只刷新顶部，比较好
+                        //$('.username').load('/' ,' .username')
+                    }
+                    else {
+                        alert(data);
+                    }
+                },
+                async: false
+            });
         });
+    });
 
 
     //这里负责对回车键的时间监控
@@ -347,20 +352,20 @@ $.ajaxSetup({data: {csrfmiddlewaretoken: '{{ csrf_token }}' }});
     });
 
     $(document).ready(function () {
-        $('#searchButton').click(function (){
+        $('#searchButton').click(function () {
             var search = $('#search').val();
-            $.ajax({url:'/id={{ id }}/search/',type:'post',data:{'search':search},success:function (data,status) {
-                if(data.length>10)
-                {
-                    $('html').html(data);       //刷新后字体会变小的bug
-                }
-                else
-                {
-                    alert(data);
-                }
-            },async:false});
+            $.ajax({
+                url: '/id={{ id }}/search/', type: 'post', data: {'search': search}, success: function (data, status) {
+                    if (data.length > 10) {
+                        $('html').html(data);       //刷新后字体会变小的bug
+                    }
+                    else {
+                        alert(data);
+                    }
+                }, async: false
+            });
         });
-
+    });
 
     $(document).ready(function () {
         $('#logout').click(function (){
