--- a/blog/templates/blog/showPhoto.html
+++ b/blog/templates/blog/showPhoto.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class=" col-lg-offset-3 col-md-offset-3 col-xs-offset-0 col-sm-6 col-md-6">
         <div class="thumbnail">
-          <img src={% static image %} alt="...">
+          <img src='{{ image.img.path }}' alt="...">
           <div class="caption">
             <h3>图片简介</h3>
             <p style="font-family: 微软雅黑;font-size: 20px;">{{ image.introduction }}</p>
