--- a/blog/templates/blog/essay.html
+++ b/blog/templates/blog/essay.html
@@ -26,7 +26,7 @@
               <img class="img-responsive" src="{{ image.img.url }}">
           {% endfor %}
           {% for file in essay.files.all %}
-              {% include file.file.url %}
+              {% include file %}
           {% endfor %}
 {#          {% include essay.file %}#}
 {#          用来将别的网页嵌入到本网页中的语法#}
