solve some bugs which will disappear on the nginx service

--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -18,7 +18,7 @@
 {% block diaries %}
     {% load static %}
     <div class="row">
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-xs-2 col-md-2">
             <div class="thumbnail">
             {% if author.avatar %}
                 <img src={% static author.avatar %}>
