--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -163,12 +163,12 @@
         myWindow.focus();
     }
     function open_win_file() {
-        myWindow=window.open('/id={{ id }}/file/add/','上传新文件','directories=no,location=no,width=500,height=200，_blank,left=400,top=200');
+        myWindow=window.open('/id={{ id }}/file/add/','上传新文件','directories=no,location=no,width=500,height=250，_blank,left=400,top=200');
         myWindow.focus();
         window.opener.close()
     }
     function open_win_image() {
-        myWindow=window.open('/id={{ id }}/image/add/','上传新文件','directories=no,location=no,width=500,height=200，_blank,left=400,top=200');
+        myWindow=window.open('/id={{ id }}/image/add/','上传新图片','directories=no,location=no,width=500,height=250，_blank,left=400,top=200');
         myWindow.focus();
         window.opener.close()
     }
@@ -188,7 +188,7 @@
             else
             {
                 $('.DispearForPhoto').css({"display":"block"});
-                $('#imageHint').text('选择你想显示的图片')
+                $('#imageHint').text('选择你想显示的图片');
                 $('#modelTitle').text('添加博客')      //修改模态框的标题
             }
         })
