--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -50,11 +50,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-left" >
-                <li><a href="/id={{ id }}/">主页<span class="sr-only">(current)</span></a></li>
-                <li><a href="/id={{ id }}/diary/">小日记</a></li>
-                <li><a href="/id={{ id }}/tech/">收获</a></li>
-                <li><a href="/id={{ id }}/trip/">旅游</a></li>
-                <li><a href="/id={{ id }}/photo/">照片墙</a></li>
+                <li><a href="/{{ id }}/">主页<span class="sr-only">(current)</span></a></li>
+                <li><a href="/{{ id }}/diary/">小日记</a></li>
+                <li><a href="/{{ id }}/tech/">收获</a></li>
+                <li><a href="/{{ id }}/trip/">旅游</a></li>
+                <li><a href="/{{ id }}/photo/">照片墙</a></li>
 {#                <li><a href="">日程安排</a></li>#}
             </ul>
 
