--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -159,16 +159,16 @@
 {% endblock %}
     <script type="text/javascript">
     function open_win_label() {
-        myWindow=window.open('/id={{ id }}/label/add/','添加新标签','directories=no,location=no,width=500,height=200，_blank,left=400,top=200');
+        myWindow=window.open('/{{ id }}/label/add/','添加新标签','directories=no,location=no,width=500,height=200，_blank,left=400,top=200');
         myWindow.focus();
     }
     function open_win_file() {
-        myWindow=window.open('/id={{ id }}/file/add/','上传新文件','directories=no,location=no,width=500,height=250，_blank,left=400,top=200');
+        myWindow=window.open('/{{ id }}/file/add/','上传新文件','directories=no,location=no,width=500,height=250，_blank,left=400,top=200');
         myWindow.focus();
         window.opener.close()
     }
     function open_win_image() {
-        myWindow=window.open('/id={{ id }}/image/add/','上传新图片','directories=no,location=no,width=500,height=250，_blank,left=400,top=200');
+        myWindow=window.open('/{{ id }}/image/add/','上传新图片','directories=no,location=no,width=500,height=250，_blank,left=400,top=200');
         myWindow.focus();
         window.opener.close()
     }
